# neural-compiler

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  BUGS.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTIONS.md  OPTIONS.md  PERFORMANCE.md  README.md  SECURITY.md  SUPPORTED_OPS.md  TESTING.md  THIRDPARTY.md  pyproject.toml  setup.cfg  setup.py
Dockerfiles/: Dockerfile
docs/: neural_ai_backend_abi.md  neural_ai_full_support_implementation_plan.md
docs/vela/: API.md  DEBUG_DB.md  OPTIONS.md
ethosu/config_files/Arm/: vela.ini
ethosu/config_files/NeuralAI/: neural-ai.ini
ethosu/mlw_codec/: mlw_codecmodule.c
ethosu/regor/: CMakeLists.txt  regor.cpp
ethosu/regor/architecture/: address.cpp  address.hpp  architecture.cpp  architecture.hpp  architecture_constraints.cpp  architecture_constraints.hpp  ethos_u_register_cs_generator.hpp  ethos_u_scaling.cpp  mlw_encode.cpp  mlw_encode.hpp  weight_encoder.hpp
ethosu/regor/cmake/: regor_options.cmake
ethosu/regor/common/: bit_flags.hpp  buffer_view.hpp  common.hpp  data_type.hpp  dynamic_typing.hpp  hash.cpp  hash.hpp  ini_reader.hpp  lexer.hpp  logging.hpp  numeric_util.hpp  ordered_map.hpp  scaling.cpp  scaling.hpp  shape.hpp  transpose_type.hpp
ethosu/regor/compiler/: attributes.cpp  attributes.hpp  cascade_builder.cpp  cascade_builder.hpp  compiler.cpp  compiler.hpp  database.hpp  faststorage_allocator.cpp  faststorage_allocator.hpp  graph.hpp  graph_builder.cpp  graph_builder.hpp  graph_optimiser.cpp  graph_optimiser.hpp  graph_optimiser_db.hpp  graph_packing.cpp  graph_packing.hpp  graph_validator.cpp  graphir_optimiser.cpp  graphir_optimiser.hpp  high_level_command_stream.hpp  high_level_command_stream_generator.cpp  high_level_command_stream_generator.hpp  hillclimb_allocator.cpp  hillclimb_allocator.hpp  kernel.hpp  live_range.cpp  live_range.hpp  lstm.cpp  lstm.hpp  lut_util.hpp  network_performance.cpp  network_performance.hpp  neural_ai_command_generator.cpp  neural_ai_command_generator.hpp  neural_ai_graph_optimiser.cpp  neural_ai_graph_optimiser.hpp  neural_ai_writer.cpp  neural_ai_writer.hpp  op_type.cpp  (+31 more)
ethosu/regor/include/: graphapi.hpp  graphapi_attr.hpp  regor.h
ethosu/regor/test/: CMakeLists.txt  randomize.hpp  test_arch_constraints.cpp  test_arch_ethos_u85.cpp  test_buffer_view.cpp  test_cascade_builder.cpp  test_data_type.cpp  test_ethos_u85_weight_encoder.cpp  test_fast_storage_allocator.cpp  test_graph_packing.cpp  test_graphir_optimiser.cpp  test_high_level_command_stream_generator.cpp  (+18 more)
ethosu/vela/: architecture_features.py  debug_database.py  fp_math.py  graph_optimiser_util.py  high_level_command_stream.py  high_level_command_to_npu_op.py  json_writer.py  live_range.py  lut.py  nn_graph.py  npu_performance.py  operation.py  pass_packing.py  rawdata_writer.py  register_command_stream_generator.py  scaling.py  stats_writer.py  tensor_allocation.py  tflite_graph_optimiser.py  tflite_mapping.py  tflite_model_semantic.py  tflite_reader.py  tflite_supported_operators.py  tflite_writer.py  tosa_graph_optimiser.py  tosa_reader.py  vela.py
test/: test_ethos_u_vela.py
(+96 files in other folders)
