# SPDX-FileCopyrightText: Copyright 2021, 2023-2025 Arm Limited and/or its affiliates <open-source-office@arm.com>
#
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the License); you may
# not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an AS IS BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "ethos-u-vela"
description = "Neural network model compiler for Arm Ethos-U NPUs"
requires-python = "~=3.9"
authors = [{name = "Arm Ltd", email = "mlg-vela@arm.com"}]
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
]
keywords = ["ethos-u", "vela", "tosa", "tflite", "npu", "compiler"]
# Third-party dependency versions are restricted based upon compatibility and security concerns.
dependencies = [
    "flatbuffers==24.3.25",
    "numpy>=1.23.0",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "build",
    "setuptools_scm[toml]~=7.1.0"
]

[project.urls]
Homepage = "https://gitlab.arm.com/artificial-intelligence/ethos-u/ethos-u-vela"

[project.scripts]
vela = "ethosu.vela.vela:main"

[build-system]
requires = [
    "setuptools >= 78.1.1",
    "wheel",
    "numpy>=1.23.0",
    "setuptools_scm[toml]~=7.1.0",
    "cmake >= 3.16.3"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "pytest {project}/test"
test-extras = ["dev"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["test", "ethosu/mlw_codec/test", "ethosu/vela/test"]

[tool.black]
line-length = 120

[tool.pylint.MAIN]
ignore = "ethosu/regor"
disable = "all"
enable = "W0102"

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.REPORTS]
score = "no"

# Configures setuptools scm to pin git describe version hash to 8 characters so that Vela version mismatch is avoided.
# Note: 'git_describe_command' is deprecated since setuptools version 8.4.0.
# TODO: Change to use scm.git.describe_command when upgrading to a newer verion of setuptools.
[tool.setuptools_scm]
git_describe_command = 'git describe --dirty --tags --long --abbrev=8'
